2008-07-14  Andreas Krebbel  <krebbel1@de.ibm.com>

PR target/36745
	* config/s390/s390.c: (s390_secondary_reload): Add a secondary
	reload for symbol refs moved to r0 with -fPIC.
	(legitimize_pic_address): Use the target register as temporary
	reg if possible.
	(emit_symbolic_move): Adjust comment.
	* config/s390/s390.md (reloadsi_PIC_addr, reloaddi_PIC_addr):
	New expanders.

2008-07-14  Andreas Krebbel  <krebbel1@de.ibm.com>

	PR target/36745
	* g++.dg/torture/pr36745.C: New testcase.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@137777 138bc75d-0d04-0410-961f-82ee72b054a4